# hermes_plugins

./: .gitignore  README.md
esp-hermes/: README.md  __init__.py  plugin.yaml
esp-hermes/config/: esp_hermes.yaml
esp-hermes/firmware/: .gitignore  CMakeLists.txt  README.md  build_env.bat  idf_component.yml  partitions.csv  sdkconfig.defaults
esp-hermes/firmware/components/esp_hermes_common/: CMakeLists.txt
esp-hermes/firmware/components/nvs_config/: CMakeLists.txt  nvs_config.c
esp-hermes/firmware/components/nvs_config/include/: nvs_config.h
esp-hermes/firmware/components/web_config/: CMakeLists.txt  web_config.c
esp-hermes/firmware/components/web_config/include/: web_config.h
esp-hermes/firmware/components/wifi_manager/: idf_component.yml  wifi_manager.c
esp-hermes/firmware/components/wifi_manager/include/: wifi_manager.h
esp-hermes/firmware/main/: CMakeLists.txt  audio_capture.c  audio_capture.h  audio_codec.c  audio_play.c  esp_hermes.c  esp_hermes.h  esp_hermes_client.c  idf_component.yml  imu_motion.c  imu_motion.h  io_tools.c  io_tools.h  lcd_pet.c  lcd_pet.h  lcd_tui.c  lcd_viz.c  lcd_viz.h  nvs_config.h
esp-hermes/gateway/: README.md  __init__.py  esp_hermes.py  esp_hermes_commands.py  esp_hermes_ws.py  requirements.txt
esp-hermes/tests/: test_esp_hermes_adapter.py
esp-hermes/tools/: __init__.py  esp_io.py
firmware/: README.md
firmware/main/: CMakeLists.txt  audio_capture.h  audio_codec.h  audio_play.c  audio_play.h  capabilities.c  capabilities.h  esp_hermes.c  esp_hermes.h  esp_hermes_client.c  imu_motion.c  imu_motion.h  io_tools.c  io_tools.h  lcd_tui.h
galaxy_brain/: README.md  plugin.yaml
galaxy_brain/dashboard/: __init__.py  api.py  app.py  manifest.json
galaxy_brain/docs/05-Demo/: Aliases Demo.md  Another Grandchild.md  Callout Demo.md  Cluster A - Note 1.md  Cluster A - Note 2.md  Cluster A - Note 3.md  Cluster B - Note 1.md  Cluster B - Note 2.md  Collapsible Cluster A.md  Collapsible Cluster B.md  GalaxyBrain Features.md  Ghost Node Demo.md  Normal Note.md  Pinned Node Demo.md  Rich Content Demo.md  Shape - Box.md  Shape - Cone.md  Shape - Cylinder.md  Shape - Sphere.md  Shape - Torus Knot.md  Shape - Torus.md  Tag Hierarchy Child.md  Tag Hierarchy Demo.md  Unpublished Secret Note.md
